# avtomat

./: CMakeLists.txt  avt.cpp  avt.h  main.cpp
tests/: avt.cpp
